fixed x overflow

--- a/ecom/src/pages/ProductPage/index.css
+++ b/ecom/src/pages/ProductPage/index.css
@@ -1,6 +1,7 @@
 .product-grid{
     height: 90vh;
     overflow-y: auto;
+    overflow-x: hidden;
     width: 100%;
     grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
 }
